<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="25dp">

    <View
        android:layout_width="100dp"
        android:layout_height="1dp"
        android:layout_gravity="center"
        android:background="@color/black"/>


    <TextView
        android:id="@+id/txt_africa"
        android:layout_marginTop="25dp"
        android:textSize="18sp"
        android:fontFamily="@font/open_sans"
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/africa"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="10dp"
        android:background="@color/black"/>

    <TextView
        android:id="@+id/txt_americas"
        android:layout_marginTop="10dp"
        android:textSize="18sp"
        android:fontFamily="@font/open_sans"
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/americas"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="10dp"
        android:background="@color/black"/>

    <TextView
        android:id="@+id/txt_asia"
        android:layout_marginTop="10dp"
        android:textSize="18sp"
        android:fontFamily="@font/open_sans"
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/asia"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="10dp"
        android:background="@color/black"/>

    <TextView
        android:id="@+id/txt_europe"
        android:layout_marginTop="10dp"
        android:textSize="18sp"
        android:fontFamily="@font/open_sans"
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/europe"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="10dp"
        android:background="@color/black"/>

    <TextView
        android:id="@+id/txt_oceania"
        android:layout_marginTop="10dp"
        android:textSize="18sp"
        android:fontFamily="@font/open_sans"
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/oceania"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="10dp"
        android:background="@color/black"/>
</LinearLayout>