<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="25dp"
    android:layout_height="match_parent"
    tools:context=".fragment.SplashScreenFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_marginTop="65dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:src="@drawable/ic_splash_screen"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:layout_marginTop="35dp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:textColor="@color/ungu"
            android:text="@string/sudahkah_anda_cek"
            android:textSize="23sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:textColor="@color/kuning"
                android:text="@string/negara"
                android:textSize="23sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:textColor="@color/ungu"
                android:text="@string/kamu_disini"
                android:textSize="23sp" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="12sp"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/open_sans"
            android:text="Aplikasi ini untuk melihat semua negara\ndidunia dan kamu dapat melihat total populasi\n serta latitude longitude nya!"/>

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/btn_lanjutkan_splash_screen"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:cardBackgroundColor="@color/ungu"
        app:cardElevation="6dp"
        android:layout_gravity="bottom"
        android:layout_margin="25dp"
        android:foreground="?android:attr/selectableItemBackground"
        android:clickable="true"
        app:cardCornerRadius="6dp"
        android:focusable="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textColor="@color/white"
                android:layout_centerInParent="true"
                android:textStyle="bold"
                android:text="@string/lanjutkan"
                android:fontFamily="@font/open_sans"/>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>