<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container_countries"
    android:layout_width="match_parent"
    android:layout_height="130dp"
    android:layout_margin="15dp"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground"
    app:cardElevation="0dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:layout_width="80dp"
            android:layout_marginStart="15dp"
            app:cardElevation="6dp"
            app:cardCornerRadius="6dp"
            android:layout_height="105dp">
            <ImageView
                android:id="@+id/img_flag_countries"
                android:elevation="8dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitCenter" />
        </androidx.cardview.widget.CardView>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_alignParentBottom="true"
            android:background="@drawable/bg_corner_edit_text">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="105dp"
                android:orientation="vertical"
                android:padding="15dp">

                <TextView
                    android:id="@+id/txt_name_countries"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/open_sans"
                    android:maxLines="1"
                    android:text="@string/indonesia"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/txt_latlong"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/open_sans"
                    android:text="@string/latitude_longitude"
                    android:textSize="11sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/ic_population" />

                    <TextView
                        android:id="@+id/txt_population"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="10dp"
                        android:fontFamily="@font/open_sans"
                        android:text="@string/_10101010"
                        android:textColor="@color/black"
                        android:maxLines="1"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                </LinearLayout>
            </LinearLayout>
        </FrameLayout>

    </RelativeLayout>

</androidx.cardview.widget.CardView>